[package]
name = "xrpl-keypairs"
version = "0.1.0"
edition = "2024"
authors = ["Uwe Grawert"]
description = "Cryptographic key pairs for the XRP Ledger"
repository = "https://github.com/grawert/xrpl-keypairs-rust"
license = "ISC"
keywords = ["xrpl", "xrp", "keypairs", "ed25519", "secp256k1"]
categories = ["cryptography::cryptocurrencies", "cryptography"]

[lib]
name = "ripple_keypairs"

[dependencies]
ripple-address-codec = "0.1"
base-x = "0.2"
hex = "0.4"
num-bigint = "0.4"
libsecp256k1 = "0.7"
ripemd = "0.1"
sha2 = "0.10"
ed25519-dalek = "2"
getrandom = "0.2"
